mail/mail-html-transformer/src/snapshots/proton_mail_html_transformer__replace_inner__test__empty_replacement.snap
---
source: mail/mail-html-transformer/src/replace_inner.rs
expression: main.to_string()
snapshot_kind: text
---
<html><head></head><body>
<div class="foo_bar"></div>


</body></html>
